Refactor MMAConsole -> SymjaScript
- add native apple/linux support